tests/good/modules/foo.sm
(module Foo imports (StdLib))

(vars ())

(functions (
  (function foo ()
    42
  )
))
