tests/bad/3.sm
# Missing stuff...
(module Main imports ())

(vars (x))

(functions ())